fix layout bug in contact section

--- a/source/stylesheets/_component__contact.scss
+++ b/source/stylesheets/_component__contact.scss
@@ -17,26 +17,26 @@
   }
 
   .contact--visit {
-    .locations li {
-      clear: none;
-      font-family: $font-stack--roboto;
-      height: 12em;
+    .locations {
+      display: flex;
+      li {
+        clear: none;
+        font-family: $font-stack--roboto;
+        width: 50%;
+        text-align: center;
 
-      @media all and (min-width: $breakpoint) {
-        width: 33%;
-      }
+        h4 {
+          font-size: 0.8em;
+          font-weight: 100;
+          margin: 1em;
+        }
 
-      h4 {
-        font-size: 0.8em;
-        font-weight: 100;
-        margin: 1em;
-      }
-
-      p {
-        filter: opacity(0.7);
-        font-size: 0.8em;
-        font-weight: 100;
-        margin: 0 auto;
+        p {
+          filter: opacity(0.7);
+          font-size: 0.8em;
+          font-weight: 100;
+          margin: 0 auto;
+        }
       }
     }
   }
